# urp

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  PACKAGE_SHA256.json  QUALITY_REPORT.md  README.md  SECURITY.md  SUPPORT.md  TEST_RESULTS.md  codemeta.json  line_count_manifest.json  mkdocs.yml  package_manifest.json  pyproject.toml  requirements-docs.txt  requirements-publication.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yaml  codeql.yaml  dependency-review.yaml  docs.yaml  release.yaml  scorecard.yaml  secret-scan.yaml
archive/handoffs/: URP_COMPLETE_HANDOFF.md  URP_FULL_HANDOFF.md
archive/source_packages/urp_oss_ideal_state_package/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOTICE  PACKAGE_INDEX.txt  README.md  SECURITY.md  URP_FULL_HANDOFF.md  line_count_manifest.json  pyproject.toml
archive/source_packages/urp_oss_ideal_state_package/docs/: 01_PRODUCT_EXPLAINER.md  02_IDEAL_STATE_ARCHITECTURE.md  03_TECHNICAL_DESIGN.md  04_PLATFORM_DATA_AI_INTEGRATION_CATALOG.md  05_RESEARCH_LANDSCAPE_AND_ALGORITHMS.md  06_OPEN_SOURCE_GOVERNANCE_AND_ADOPTION.md  07_SECURITY_PRIVACY_COMPLIANCE_AND_TRUST.md  08_CODEX_IMPLEMENTATION_BLUEPRINT.md  09_APIS_SCHEMAS_AND_PROTOCOLS.md  10_TESTING_BENCHMARKS_OBSERVABILITY_AND_OPS.md
archive/source_packages/urp_oss_ideal_state_package/examples/: docker-compose.yaml
archive/source_packages/urp_oss_ideal_state_package/specs/: compute_manifest.schema.json  openapi.yaml  urp.proto  urp_manifest.schema.json
archive/source_packages/urp_quality_product_package/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  PACKAGE_SHA256.txt  QUALITY_REPORT.md  README.md  SECURITY.md  TEST_RESULTS.md  URP_COMPLETE_HANDOFF.md  package_manifest.json  pyproject.toml
archive/source_packages/urp_quality_product_package/codex/: ACCEPTANCE_CHECKLIST.md  (+2 more)
codex/: ACCEPTANCE_CHECKLIST.md  CODEX_BUILD_PROMPT.md  ROADMAP_AND_TICKETS.md
crates/urp-chunker/: Cargo.toml
crates/urp-chunker/src/: lib.rs
crates/urp-core/: Cargo.toml
crates/urp-core/src/: lib.rs
crates/urp-gateway-s3/: Cargo.toml
crates/urp-gateway-s3/src/: lib.rs
deployments/docker/: Dockerfile
deployments/docker-compose/: docker-compose.yaml
deployments/edge/: urp-edge-sidecar.yaml
deployments/helm/urp/: .helmignore  Chart.yaml  values.schema.json  values.yaml
deployments/kubernetes/: urp-control-plane.yaml  urp-multi-region.yaml
deployments/on-prem/: docker-compose.airgap.yaml
deployments/on-prem/systemd/: urp-control-plane.service
deployments/operator/: urp-operator.yaml
deployments/terraform/aws/: .terraform.lock.hcl  main.tf
deployments/terraform/azure/: .terraform.lock.hcl  main.tf
deployments/terraform/gcp/: .terraform.lock.hcl  main.tf
docs/: 00_START_HERE.md  01_PRODUCT_EXPLAINER.md  02_IDEAL_STATE_ARCHITECTURE.md  05_ADAPTER_CATALOG_AND_COMPATIBILITY.md  06_POLICY_SECURITY_COMPLIANCE.md  07_APIS_SCHEMAS_PROTOCOLS.md  08_IMPLEMENTATION_BLUEPRINT_CODEX.md  09_OBSERVABILITY_BENCHMARKS_OPS.md  12_DEPLOYMENT_PLAYBOOKS.md  13_PLATFORM_READINESS.md  404.md  DEPLOYMENT_QUICKSTART.md  DISCOVERABILITY.md  FAQ.md  MIGRATION_NOTES.md  WHITE_PAPER.md  index.md  llms.txt  robots.txt
docs/assets/stylesheets/: extra.css
docs/overrides/: main.html
examples/: USE_CASES.md  docker-compose.yaml
examples/impact/: README.md  illustrative-high.json  illustrative-low.json  illustrative-portfolio.json
examples/kubernetes/: urp-control-plane.yaml
examples/live/: README.md  run_live_examples.py
examples/policies/: semantic_ai_policy_shadow.yaml
examples/terraform/aws/: main.tf
go/: go.mod  urp.go  urp_test.go
go/urp/: urp.go
output/: arxiv-compliance.json
paper/arxiv/: COMPLIANCE.md  README.md  metadata.json
plugins/: README.md
plugins/adapters/local-s3-adapter/: README.md  plugin.json  plugin.yaml  security.md
plugins/classifiers/local-kind-classifier/: README.md  plugin.json  plugin.yaml  security.md
plugins/transforms/zstd-stdlib-fallback/: README.md  plugin.json  plugin.yaml  security.md
plugins/verifiers/sha256-restore-verifier/: README.md  plugin.json  plugin.yaml  security.md
python/urp/: __init__.py  action_registry.py  adapters.py  advanced.py  ai_gateway.py  ai_router.py  api.py  approval_store.py  auth.py  benchmarks.py  cache.py  cache_verification.py  checkpoints.py  chunk_store.py  chunking.py  cli.py  config.py  conformance.py  context.py  contracts.py  deployment_validation.py  disaster_recovery.py  edge_sync.py  encoding.py  errors.py  executor.py  health.py  impact.py  kms.py  lakehouse.py  ledger.py  live_adapters.py  log_templates.py  manifest_explorer.py  manifest_store.py  metrics.py  operator.py  package_metadata.py  plan_store.py  planner.py  (+20 more)
research/: research_sources.yaml
scripts/: generate-dev-env.sh  render_whitepaper.py  verify_arxiv_submission.py
services/control-plane/: README.md
services/gateway-ai/: README.md
services/gateway-s3/: README.md
services/scheduler/: README.md
services/worker/: README.md
specs/: compute_manifest.schema.json  openapi.yaml  reduction_policy.legacy.schema.json  urp.proto  urp_ledger_event.schema.json  urp_manifest.schema.json  urp_policy.schema.json  urp_work_unit.schema.json
tests/benchmarks/: test_benchmark_smoke.py
tests/conformance/: test_hardening.py  test_security_and_adapters.py
tests/integration/: test_live_examples.py  test_runtime.py
tests/load/: test_load_local.py
tests/unit/: test_core.py
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: index.ts
typescript/tests/: client.test.mjs
(+87 files in other folders)
