[workspace]
members = [
    "crates/urp-core",
    "crates/urp-chunker",
    "crates/urp-gateway-s3",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/thewisecrab/urp"
homepage = "https://thewisecrab.github.io/urp/"
authors = ["URP contributors"]
