[package]
name = "urp-chunker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Exact content-defined chunking primitives for the Universal Reduction Plane"

[lib]
name = "urp_chunker"
path = "src/lib.rs"
